# bin_picking

./: .gitignore  =20.3  =3.4.5  Focal_Length_and_Principal_Point.md  Readme,md  Readme.md  conda_env.yml  dependencies.txt  deps_install.sh  open3d.txt  open3d2_env.txt  pyocc.txt
PointCloudProcessor/: CMakeLists.txt  Notes.txt  Project_plan.md
PointCloudProcessor/GPU_server/: srv_CVsegmentation.py  srv_YOLOsegmentation.py
PointCloudProcessor/assets/: generated_pcd.pcd  object_pcd sample.pcd  object_pcd.pcd
PointCloudProcessor/include/: detect_color_bbox.hpp  example-utils.hpp  example.hpp  helper_functions.hpp  pcd_processing.hpp
PointCloudProcessor/servers/: CMakeLists.txt  rs_server.cpp  srv_YOLOsegmentation.py
PointCloudProcessor/servers/tests/: rs_client.cpp
PointCloudProcessor/src/: helper_functions.cpp  main copy.cpp  main.cpp  pcd_processing copy.cpp  pcd_processing.cpp  pcd_processing_without_server.cpp
PointCloudProcessor/tests/: test_bounding_box.cpp  test_pcd_saving.cpp
cpp_codes/: capture_depth_alignment.cpp
grasp_known_thing/: Notes.txt  Project_plan.md  dependencies.txt
grasp_known_thing/archives/: pcd_saving.cpp  pcd_saving.hpp
grasp_known_thing/main_computer/: CMakeLists.txt
grasp_known_thing/main_computer/assets/: generated_pcd.pcd  isolated_pcd.pcd  object_pcd.pcd
grasp_known_thing/main_computer/include/: PclUtils.hpp  Registration.hpp  SceneProcessing.hpp  SensorReceiver.hpp  cad_pcd.hpp  pcd_processing.hpp
grasp_known_thing/main_computer/segmentaion/: srv_YOLOsegmentation.py
grasp_known_thing/main_computer/src/: PclUtils.cpp  Registration.cpp  SceneProcessing.cpp  SensorReceiver.cpp  main.cpp  pcd_processing.cpp
grasp_known_thing/sensor_pi/: CMakeLists.txt  SensorAcquisitionPi.cpp
my_grab/: CMakeLists.txt  CMakeLists.txt_back
my_grab/assets/: generated_pcd.pcd  isolated_pcd.pcd  object_pcd.pcd  object_pcd_filtered.pcd
my_grab/include/: cad_pcd.hpp  example.hpp  object_detection.hpp  pcd_capture.hpp  pcd_frm_depth.hpp  test_utils.hpp  visualization.hpp  visualization.hpp_static
my_grab/src/: detect_color_bbox.cpp  main.cpp  main.cpp_stream  object_detection.cpp  pcd_capture.cpp  pcd_frm_depth.cpp  visualization.cpp  visualization.cpp_static
my_grab/src/functional_tests/: pcd_from_bbox.cpp  test_cad_overlay copy.cpp  test_cad_overlay.cpp  test_display_pcd_opengl.cpp  test_pcd_from_bbox.cpp  test_pcd_seg_new.cpp  test_pcd_segmentation.cpp
my_grab/src/unit_tests/: test_augmented_pcd.cpp  test_cad_pcd.cpp  test_color_bbox.cpp  test_object_detection.cpp  test_pcd_capture.cpp  test_pcd_frm_depth.cpp  test_visualization.cpp
my_grab/utils/: convert_cad_pcd.py
tests/object_detection/: image_generation_from_step.py  train_cnn.py
tests/object_detection/classic/: dependencies.txt  notes.md  requirements.txt  strategy.md
tests/object_detection/classic/src/: main.py  preprocess.py  realsense_capture.cpp  registration.py  segmentation.py
tests/object_detection/classic/utils/: mesh2pcl.py  step2stl.py
tests/object_detection/cnn/: cnn_model.py
tests/object_detection/pcl_grab/: CMakeLists.txt  main.cpp
tests/object_detection/rs_pcd/: CMakeLists.txt
tests/object_detection/rs_pcd/assets/: VN_1400.step  VN_1400.stl  generated_pcd.pcd
tests/object_detection/rs_pcd/config/: paths.json
tests/object_detection/rs_pcd/src/: cad_pcd.cpp  rs-pointcloud.cpp
tests/pose_estimation/pca/: bbox_select.py  cad_to_pcd.py  capture_image_depth.py  default_point_cloud_fcn.py  generate_point_cloud_custom.py  helper_functions.py  notes.md  orange_tracker.py  orange_tracker_registered.py  pose_estimation.py  pose_estimation_registration.py  ref_design_PCA.py  test2.py  test_camera.py  test_code.py  test_custom_ICP.py  test_registraton.py  view_xyz.py
tests/pose_estimation/registration/: CMakeLists.txt  install.txt  point_cloud_registration.cpp
tests/robot_motion/: Notes.txt  color_tracker_image.py  color_tracker_pcd.py  delete.py  feature_registration1.py  feature_registratoin.py  grap_point_transformation.py  grasp_points.py  grasp_points_fuckeup.py  helper_functions.py  my_icp.py  pcd_plotter.py  test_registration.py
tests/segmentation/: running_instructions.txt  yolo_output.py  yolo_track_with_rs copy.py  yolo_track_with_rs.py  yolo_tracker.py
